fix font weight and letter spacing

--- a/client/views/experiences/experienceHeader.less
+++ b/client/views/experiences/experienceHeader.less
@@ -2,8 +2,11 @@
   display: inline-block;
   text-align: center;
   font-size: 16px;
+  font-weight: 100;
   text-transform: uppercase;
   line-height: 50px;
+  letter-spacing: .1em;
+
   &.time {
     border-left: 1px solid #fff;
   }
